--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/button5"
 
-        android:layout_gravity="bottom|center"
+        android:layout_gravity="|center"
         android:gravity="center"
         android:text="Button" />
 
